Fixed footer align.

--- a/project/ajapaik/static/css/ajapaik-style.css
+++ b/project/ajapaik/static/css/ajapaik-style.css
@@ -2856,7 +2856,7 @@ input[type="search"]::-webkit-search-cancel-button {
     height: 33px;
 }
 
-.comment-box textarea{
+.comment-box textarea {
     display: block;
     width: 100%;
     resize: vertical;
@@ -2867,10 +2867,15 @@ input[type="search"]::-webkit-search-cancel-button {
     background-color: black;
 }
 
-.ajapaik-load-more{
+.ajapaik-load-more {
     margin: 10px 0 10px 0;
 }
 
-.ajapaik-load-more button{
+.ajapaik-load-more button {
     width: 100%;
+}
+
+#ajapaik-frontpage-container {
+    /* 130 = height of top menu + height of footer (50 + 80) */
+    min-height: calc(100vh - 130px);
 }
